--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,13 @@
     "es2015",
     "stage-0",
     "react"
-  ]
+  ],
+      "plugins": [
+        ["import", {
+          "libraryName": "antd",
+          "style": "css"
+          }]]
+
   //  "plugins": [
   //  [ "import", { "libraryName": "antd", "style": "css" }]// `style: true` 会加载 less 文件
   // ]
